<resources>
    <string name="app_name">BoebotRemote</string>
    <string name="commands">Commands</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="delay">Delay</string>
    <string name="connect">Connect</string>
    <string name="circle">Circle</string>
    <string name="output_screen">OutputScreen</string>
    <string name="empty">Empty</string>
    <string name="off">Off</string>
    <string name="input">Input</string>
    <string name="awaitingCommand">Waiting</string>
    <string name="unit">Unit</string>

</resources>
