<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.controller.brdgt.com.bobotremote.MainActivity"
    android:background="@drawable/blue"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/commands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commands"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/right_arrow"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintTop_toTopOf="@+id/connector"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.17000002" />

    <Button
        android:id="@+id/start_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.466"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="41dp"
        android:layout_marginLeft = "41dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/end_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/end"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/start_button"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintVertical_bias="0.466" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="195dp"
        android:layout_height="190dp"
        app:srcCompat="@drawable/circle"
        tools:ignore="circle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/turn_left"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.04" />

    <Button
        android:id="@+id/up"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:background="@drawable/directional_button"
        app:layout_constraintTop_toTopOf="@+id/circle"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/down_arrow"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.01999998"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.23" />

    <Button
        android:id="@+id/left_arrow"
        android:layout_width="56dp"
        android:layout_height="60dp"
        android:background="@drawable/left"
        app:layout_constraintBottom_toBottomOf="@+id/right_arrow"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/down_arrow"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/right_arrow"
        android:layout_width="56dp"
        android:layout_height="60dp"
        android:background="@drawable/right"
        app:layout_constraintLeft_toRightOf="@+id/left_arrow"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/circle"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/turn_right" />

    <Button
        android:id="@+id/down_arrow"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:background="@drawable/down"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.854"
        app:layout_constraintBottom_toTopOf="@+id/turn_left"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.23" />

    <Button
        android:id="@+id/delay"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:text="@string/delay"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/down_arrow"
        app:layout_constraintVertical_bias="0.786"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.44" />

    <Button
        android:id="@+id/turn_left"
        android:layout_width="95dp"
        android:layout_height="96dp"
        android:background="@drawable/left_turn"
        tools:layout_editor_absoluteY="223dp"
        tools:layout_editor_absoluteX="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.44"/>

    <Button
        android:id="@+id/turn_right"
        android:layout_width="106dp"
        android:layout_height="98dp"
        android:background="@drawable/right_turn"
        tools:layout_editor_absoluteY="223dp"
        tools:layout_editor_absoluteX="103dp" />

    <Button
        android:id="@+id/connector"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="128dp"
        android:layout_height="36dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/connect"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/commands"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/circle"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.24000001" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="154dp"
        android:layout_height="271dp"
        app:srcCompat="@drawable/output_screen"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/turn_right"
        app:layout_constraintHorizontal_bias="0.93"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/commands" />


</android.support.constraint.ConstraintLayout>
